--- a/src/jbake/assets/css/blog.css
+++ b/src/jbake/assets/css/blog.css
@@ -25,8 +25,29 @@ nav#nav{
 }
 
 #header{
-	padding-top: 5em;
+	padding-top: 100px;
 }
+
+#tblogo{
+    width: 650px;
+    margin: 0 auto;
+    position: relative;
+    z-index: 2;
+}
+
+#tblogoimg{
+    height: 100px;
+    background-image: url('images/tblogo2.png');
+    background-repeat: no-repeat;
+    -webkit-background-size: 70px 88px;
+    -moz-background-size: 70px 88px;
+    background-size: 70px 88px;
+    display:block;
+}
+
+
+
+
 #header .header-name{
 	font-family: fantasy;
 	font-size: 3em;
