--- a/src/jbake/assets/css/blog.css
+++ b/src/jbake/assets/css/blog.css
@@ -37,7 +37,7 @@ nav#nav{
 
 #tblogoimg{
     height: 100px;
-    background-image: url('images/tblogo2.png');
+    background-image: url('/images/tblogo2.png');
     background-repeat: no-repeat;
     -webkit-background-size: 70px 88px;
     -moz-background-size: 70px 88px;
